# sparkobs

./: .gitignore  README.md  main.py  pyproject.toml  telescope.py
.github/workflows/: test.yaml
config/: ztf.toml
plans/: plan_glg_healpix_all_bn230430325.json
sparkobs/: __main__.py  constants.py  telescope.py  tests.py  utils.py
